trunk/Archive2/66/0ebd7af49e6401/output
main.cpp: In function 'int main()':
main.cpp:13:17: error: invalid initialization of non-const reference of type 'A&' from an rvalue of type 'A'
     A& a = f(A());
                 ^
